adds more spore implementation functions, template for doing the attr function